Bug 437171 - Virtual Keyboard applet should be completely disabled when no virtual keyboard is configured
Summary: Virtual Keyboard applet should be completely disabled when no virtual keyboar...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: general (other bugs)
Version First Reported In: master
Platform: Neon Linux
: NOR minor
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords: wayland-only
Depends on:
Blocks:
 
Reported: 2021-05-15 18:17 UTC by Patrick Silva
Modified: 2021-05-24 14:23 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.23
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-05-15 18:17:42 UTC
When "None" is selected in Virtual Keyboard KCM, Virtual Keyboard applet
in system tray is labeled "No virtual keyboard configured".
However, when we click on this applet Plasma displays a pointless OSD saying
"On screen keyboard activated/deactivated".

EXPECTED RESULT
nothing should happen when we click on the applet while no virtual keyboard
is configured. A way to remove this applet from system tray also would be nice.

Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2021-05-18 21:16:36 UTC
Agreed.
Comment 2 Nicolas Fella 2021-05-22 12:25:13 UTC
I don't disagree, but alternatively it could open the virtual keyboard config when clicking the item
Comment 3 Bug Janitor Service 2021-05-23 19:19:16 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/1028
Comment 4 Nicolas Fella 2021-05-24 11:53:39 UTC
Git commit 99b84a321acea3e91ec973542e7bea45bafc7a5f by Nicolas Fella.
Committed on 24/05/2021 at 11:53.
Pushed by nicolasfella into branch 'master'.

Don't show virtual keyboard SNI when no virtual keyboard is selected in the KCM

Not choosing any virtual keyboard is a valid option. In this case do not show the SNI since it isn't very useful then and takes up some space in the system tray.

M  +36   -34   src/inputmethod.cpp
M  +1    -1    src/inputmethod.h

https://invent.kde.org/plasma/kwin/commit/99b84a321acea3e91ec973542e7bea45bafc7a5f