Don't show virtual keyboard SNI when no virtual keyboard is selected in the KCM

Not choosing any virtual keyboard is a valid option. In this case do not show the SNI since it isn't very useful then and takes up some space in the system tray.

BUG: 437171